tests/fail/cast_struct.us


struct List<T> {
    head:T,
    body:T
}


fn main() -> List<str> {
    let list = List{
        head:10,
        body:10
    };

    list as i32; // Expect : Cannot cast `List<i32,i32>` to type `i32`
}
